add recommend station

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 <header id="header">
   <div class="navbox">
     <h2 id="mnavh"><span class="navicon"></span></h2>
-    <div class="logo"><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/index.html#">个人博客</a></div>
+    <div class="logo"><a href="./index.html">个人博客</a></div>
     <nav>
       <ul id="starlist">
-        <li><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/index.html" id="selected">首页</a></li>
+        <li><a href="./index.html" id="selected">首页</a></li>
         <li><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/list.html">个人博客日记</a></li>
         <li class="menu"><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/list2.html">博客网站制作</a>
           <ul class="sub">
@@ -65,7 +65,7 @@
           </ul>
           <span></span></li>
         <li><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/list3.html">网页设计心得</a></li>
-        <li><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/daohang.html">优秀个人博客</a></li>
+        <li><a href="./recommend.htm">推荐站点</a></li>
         <li><a href="https://www.17sucai.com/preview/1078031/2019-01-18/%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%A8%A1%E6%9D%BF/about.html">关于我</a></li>
       </ul>
     </nav>
